--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Gallo Street 13th
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
+author: Letain Gao
 language: 
   - zh-CN
   - en
@@ -63,7 +63,7 @@ prismjs:
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-  path: /default-index/
+  path: ''
   per_page: 10
   order_by: -date
 
@@ -99,7 +99,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: stellar
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
